--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
         </div>
       </div>
       <% if current_user %>
+       <%= current_user.name%>
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+       
       <% else %>
         <%= link_to 'Sign in', user_session_path %>
       <% end %>
