--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,8 +11,9 @@
       Recent posts
     </h3>
     <ul class="posts">
-   
+      <%= render @my_posts %>
       <%= render @timeline_posts %>
+      
 
     </ul>
   </article>
